--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             animation: {
               'glow-soft': 'glow-soft 3s ease-in-out infinite alternate',
               'float': 'float 10s ease-in-out infinite',
+              'shimmer': 'shimmer 2s linear infinite',
             },
             keyframes: {
               'glow-soft': {
@@ -57,6 +58,10 @@
               float: {
                 '0%, 100%': { transform: 'translateY(0) scale(1)' },
                 '50%': { transform: 'translateY(-10px) scale(1.01)' },
+              },
+              shimmer: {
+                '0%': { transform: 'translateX(-100%)' },
+                '100%': { transform: 'translateX(100%)' }
               }
             }
           }
